--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,11 @@ kotlin {
     js {
         useCommonJs()
         browser {
+            testTask {
+                useKarma {
+                    useChromeHeadless()
+                }
+            }
         }
     }
     sourceSets {
@@ -62,6 +67,7 @@ kotlin {
             dependencies {
                 implementation kotlin('test')
                 implementation kotlin('test-junit')
+                implementation "io.ktor:ktor-server-test-host:$ktor_version"
             }
         }
         jsMain {
